added simple navbar

--- a/html/index.html
+++ b/html/index.html
@@ -28,7 +28,6 @@
           </div>
           <form class="form-inline my-2 my-lg-0">
             <button class="btn btn-outline-success my-2 my-sm-0" type="button">BUY TICKETS</button>
-            <div id="like_button_container"></div>
           </form>
         </div>
       </nav>
@@ -43,5 +42,25 @@
     <!-- Custom Scripts -->
     <script type="text/javascript" src="../scripts/script.js"></script>
     <script type="text/babel" src="../scripts/ContactSection.js"></script>
+
+    <footer class="footer">
+      <!-- Social Button Row -->
+      <div id="social-button-row">
+          <ul class="nav justify-content-center">
+              <li class="nav-item">
+                <a class="nav-link" target="_blank" href="https://www.facebook.com/PPIA.ICON2018/"><i class="fab fa-facebook-f fa-2x"></i></a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" target="_blank" href="https://www.instagram.com/icon_2019/"><i class="fab fa-instagram fa-2x"></i></a>
+              </li>
+            </ul>
+      </div>
+
+      <!-- Copyright -->
+      <div class="text-center py-3">
+        Brought with <i class="fas fa-heart"></i> by PPIA UNSW
+      </div>
+      <!-- Copyright -->
+    </footer>
 	</body>
 </html>
