added team members and react component

--- a/html/index.html
+++ b/html/index.html
@@ -65,25 +65,25 @@
       <div id="teams-row">
         <ul class="nav justify-content-center">
           <li class="nav-item">
-            <a id="exec-link" class="nav-link team-link" href="#">Executive</a>
+            <a id="exec-link" class="nav-link team-link">Executive</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link team-link" href="#">Events</a>
+            <a class="nav-link team-link" href="javascript:;">Events</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link team-link" href="#">Marketing</a>
+            <a class="nav-link team-link" href="javascript:;">Marketing</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link team-link" href="#">Design</a>
+            <a class="nav-link team-link" href="javascript:;">Design</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link team-link" href="#">Liaison Officers</a>
+            <a class="nav-link team-link" href="javascript:;">Liaison Officers</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link team-link" href="#">Sponsorship</a>
+            <a class="nav-link team-link" href="javascript:;">Sponsorship</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link team-link" href="#">Logistics</a>
+            <a class="nav-link team-link" href="javascript:;">Logistics</a>
           </li>
         </ul>
       </div>
@@ -153,10 +153,11 @@
     <script src="https://unpkg.com/react@16/umd/react.development.js" crossorigin></script>
     <script src="https://unpkg.com/react-dom@16/umd/react-dom.development.js" crossorigin></script>
     
-    <!-- Custom Scripts -->
-    <script type="text/javascript" src="../scripts/script.js"></script>
     <!-- Imports the list of all committee members for PhotoList.js -->
     <script src="../scripts/Members.js"></script>
     <script src="../scripts/PhotoList.js"></script>
+    
+    <!-- Custom Scripts -->
+    <script type="text/javascript" src="../scripts/script.js"></script>
 	</body>
 </html>
