--- a/html/index.html
+++ b/html/index.html
@@ -6,7 +6,7 @@
         <link rel="stylesheet" href="../bootstrap-4.1.3-dist/css/bootstrap.min.css">
 		    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Open+Sans">
         <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css" integrity="sha384-B4dIYHKNBt8Bc12p+WXckhzcICo0wtJAoU8YZTY5qE0Id1GSseTk6S+L3BlXeVIU" crossorigin="anonymous">
-        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+        <script src="../node_modules/jquery/dist/jquery.min.js"></script>
         <script src="../bootstrap-4.1.3-dist/js/bootstrap.min.js"></script>
         <link rel="stylesheet" type="text/css" href="../styles/animate.css">
         <link rel="stylesheet" type="text/css" href="../styles/index.css">
@@ -31,7 +31,7 @@
             </li>
 
             <li class="nav-item">
-              <a class="mx-4 nav-link" href="#">SPEAKERS</a>
+              <a class="mx-4 nav-link" href="#our-speakers">SPEAKERS</a>
             </li>
 
             <li class="nav-item dropdown">
@@ -49,8 +49,13 @@
       </nav>
 
     <!-- Theme Page -->
-    <div id="theme-section">
-      <img class="img-fluid" src="../assets/ICON2018Cover.jpg" alt="theme-image">
+    <div id="theme-section"></div>
+
+    <!-- Event Trailer -->
+    <div id='trailer'>
+      <div class="embed-responsive embed-responsive-21by9">
+        <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/PyqV1YZ_gQ8" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+      </div>
     </div>
 
     <!-- About ICON -->
@@ -72,28 +77,46 @@
       </div>
     </div> -->
 
-    <div id="about-section" class="container-fluid">
-      <div class='about-heading'>
-        <h1>About</h1>
-        <h1>ICON</h1>
-      </div>
-      <div class='about-details text-center'>
-        <p>
-          ICON is a platform for sharing IDEAS to INSPIRE the next generation of Indonesians to make an IMPACT. 
-          It is a conference where influential speakers come and spread ideas, catalyzing development and drive for 
-          the future generation of Indonesians.
-        </p>
-      </div>
-    </div>
+    <div id="about-section" class="container-fluid"></div>
 
     <!-- Past Speakers -->
-    <div id='past-speakers' class="container-fluid text-center">
-      <h1>Our Past Speakers</h1>
-    </div>
-
-    <!-- Event Trailer -->
-    <div id='trailer' class="embed-responsive embed-responsive-16by9">
-      <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/PyqV1YZ_gQ8" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+    <div id='our-speakers' class="container-fluid text-center">
+      <h1>Our Speakers</h1>
+      <div id="history-row">
+        <ul class="nav justify-content-center">
+          <li class="nav-item">
+            <a class="nav-link" href="javascript:;">ICON 2019</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link team-link" href="javascript:;">ICON 2018</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link team-link" href="javascript:;">ICON 2017</a>
+          </li>
+        </ul>
+      </div>
+      <div id="speaker-content-row">
+        <div id="speakers-column">
+          <div class="speaker-img speaker-div">
+            Hello
+          </div>
+          <div class="speaker-img1 speaker-div">
+            Hello
+          </div>
+          <div class="speaker-img2 speaker-div">
+            Hello
+          </div>
+          <div class="speaker-img3 speaker-div">
+            Hello
+          </div>
+          <div class="speaker-img4 speaker-div">
+            Hello
+          </div>
+          <div class="speaker-img5 speaker-div">
+            Hello
+          </div>
+        </div>
+      </div>
     </div>
 
     <!-- Charity Section -->
@@ -148,28 +171,8 @@
       </div>
 
       <!-- Committee Photos Roles -->
-  
       <div id="team-photo-section" class="animated text-center container-fluid">
         <!-- Populate with Javascript-->
-        <!-- <div class="d-flex flex-wrap justify-content-center">
-          <div class="profile">
-            <img src="../assets/team-photos/executive/photo.jpg">
-            <h4>Sebastian Chua</h4>
-            <h6>Project Manager</h6>
-          </div>
-          <div class="profile">
-            <img src="../assets/team-photos/executive/photo.jpg">
-          </div>
-          <div class="profile">
-            <img src="../assets/team-photos/executive/photo.jpg">
-          </div>
-          <div class="profile">
-            <img src="../assets/team-photos/executive/photo.jpg">
-          </div>
-          <div class="profile">
-            <img src="../assets/team-photos/executive/photo.jpg">
-          </div>
-        </div> -->
       </div>
 
     </div>
@@ -202,16 +205,6 @@
             </div>
         </div>
     </footer>
-
-
-    <!-- Load React. -->
-    <!-- Note: when deploying, replace "development.js" with "production.min.js". -->
-    <!-- <script src="https://unpkg.com/react@16/umd/react.development.js" crossorigin></script>
-    <script src="https://unpkg.com/react-dom@16/umd/react-dom.development.js" crossorigin></script> -->
-    
-    <!-- Imports the list of all committee members for PhotoList.js -->
-    <!-- <script src="../scripts/Members.js"></script> -->
-    <!--<script src="../scripts/PhotoList.js"></script>-->
     
     <!-- Custom Scripts -->
     <script type="text/javascript" src="../scripts/script.js"></script>
