added event details section

--- a/html/index.html
+++ b/html/index.html
@@ -51,6 +51,9 @@
     <!-- Theme Page -->
     <div id="theme-section"></div>
 
+    <!-- Event Details -->
+    <div id="event-details" class="container-fluid"></div>
+
     <!-- Event Trailer -->
     <div id='trailer'>
       <div class="embed-responsive embed-responsive-21by9">
@@ -58,24 +61,7 @@
       </div>
     </div>
 
-    <!-- About ICON -->
-    <!-- <div id="about-section" class="container-fluid text-center">
-      <div class='event-details column'>
-        <h1>Event Details</h1>
-        <h4>John Clancy Auditorium, UNSW</h4>
-        <h5>Sydney, Australia</h5>
-        <h6>July 6th, 2019</h6>
-        <a href="https://www.facebook.com/PPIA.ICON2018/" target='_blank' class="btn btn-primary">Go To Event Page</a>
-      </div>
-      <div class='about-details column'>
-        <h1>About ICON</h1>
-        <p>
-          ICON is a platform for sharing IDEAS to INSPIRE the next generation of Indonesians to make an IMPACT. 
-          It is a conference where influential speakers come and spread ideas, catalyzing development and drive for 
-          the future generation of Indonesians.
-        </p>
-      </div>
-    </div> -->
+    
 
     <div id="about-section" class="container-fluid"></div>
 
@@ -179,6 +165,7 @@
 
     <div id="see-you-section" class="container-fluid text-center">
       <h1>Ready to Leave Your Mark?</h1>
+      <!-- Add a Countdown here -->
       <h4>John Clancy Auditorium, UNSW</h4>
       <h5>Sydney, Australia</h5>
       <h6 style="color: grey; font-weight: 400;">July 6th, 2019</h6>
