added parallax and fade in effects. Also cleaned up content management

--- a/html/index.html
+++ b/html/index.html
@@ -49,7 +49,12 @@
       </nav>
 
     <!-- Theme Page -->
-    <div id="theme-section"></div>
+    <div id="theme-section">
+      <div class="layer background-layer"></div>
+      <div class="layer shapes-layer"></div>
+      <div class="layer text-layer"></div>
+    </div>
+    <div id="theme-section-mobile"></div>
 
     <!-- Event Details -->
     <div id="event-details" class="container-fluid"></div>
@@ -61,8 +66,7 @@
       </div>
     </div>
 
-    
-
+    <!-- About Us Section -->
     <div id="about-section" class="container-fluid"></div>
 
     <!-- Past Speakers -->
@@ -106,25 +110,7 @@
     </div>
 
     <!-- Charity Section -->
-    <div id="charity-section" class="container-fluid">
-      <div class='charity-details text-center'>
-        <p>
-          Focusing on mentally-ill individuals, education for poverty-stricken individuals,
-          and marginalised groups, SEMESTA Foundation provides not only financial aid, but also 
-          training, infrastructure development, and management advocacy to aid these groups 
-          reclaim their livelihood.
-        </p>
-      </div>
-
-      <div class='charity-heading'>
-        <h1>Our</h1>
-        <h1>Charity</h1>
-      </div>
-    </div>
-
-    <div id="awards-section" class="container-fluid">
-      <h1>'Best Educational Event in Australia'</h1>
-    </div>
+    <div id="charity-section" class="container-fluid"></div>
 
     <!-- Meet the Team -->
     <div id="meet-the-team" class="container-fluid">
@@ -163,8 +149,8 @@
 
     </div>
 
-    <div id="see-you-section" class="container-fluid text-center">
-      <h1>Ready to Leave Your Mark?</h1>
+    <div id="sponsor-section" class="container-fluid text-center">
+      <h1>Proudly Supported By</h1>
       <!-- Add a Countdown here -->
       <h4>John Clancy Auditorium, UNSW</h4>
       <h5>Sydney, Australia</h5>
