--- a/html/index.html
+++ b/html/index.html
@@ -72,7 +72,7 @@
     <!-- Past Speakers -->
     <div id='our-speakers' class="container-fluid text-center">
       <h1>Our Speakers</h1>
-      <div id="history-row">
+      <div id="speakers-history-row">
         <ul class="nav justify-content-center">
           <li class="nav-item">
             <a class="nav-link" href="javascript:;">ICON 2019</a>
@@ -86,25 +86,23 @@
         </ul>
       </div>
       <div id="speaker-content-row">
-        <div id="speakers-column">
-          <div class="speaker-img speaker-div">
-            Hello
-          </div>
-          <div class="speaker-img1 speaker-div">
-            Hello
-          </div>
-          <div class="speaker-img2 speaker-div">
-            Hello
-          </div>
-          <div class="speaker-img3 speaker-div">
-            Hello
-          </div>
-          <div class="speaker-img4 speaker-div">
-            Hello
-          </div>
-          <div class="speaker-img5 speaker-div">
-            Hello
-          </div>
+        <div class="speaker-img speaker-div">
+          Hello
+        </div>
+        <div class="speaker-img1 speaker-div">
+          Hello
+        </div>
+        <div class="speaker-img2 speaker-div">
+          Hello
+        </div>
+        <div class="speaker-img3 speaker-div">
+          Hello
+        </div>
+        <div class="speaker-img4 speaker-div">
+          Hello
+        </div>
+        <div class="speaker-img5 speaker-div">
+          Hello
         </div>
       </div>
     </div>
