--- a/html/icon2019.html
+++ b/html/icon2019.html
@@ -3,13 +3,18 @@
 <html>
 	<head>
         <title>ICON 2019 - Leave Your Mark</title>
-        <link rel="stylesheet" href="../bootstrap-4.1.3-dist/css/bootstrap.min.css">
+        <!-- <link rel="stylesheet" href="../bootstrap-4.1.3-dist/css/bootstrap.min.css"> -->
+        <link rel="stylesheet" href="./bootstrap-4.1.3-dist/css/bootstrap.min.css">
 		    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Open+Sans">
         <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css" integrity="sha384-B4dIYHKNBt8Bc12p+WXckhzcICo0wtJAoU8YZTY5qE0Id1GSseTk6S+L3BlXeVIU" crossorigin="anonymous">
-        <script src="../node_modules/jquery/dist/jquery.min.js"></script>
-        <script src="../bootstrap-4.1.3-dist/js/bootstrap.min.js"></script>
-        <link rel="stylesheet" type="text/css" href="../styles/animate.css">
-        <link rel="stylesheet" type="text/css" href="../styles/index.css">
+        <!-- <script src="../node_modules/jquery/dist/jquery.min.js"></script> -->
+        <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script>
+        <!-- <script src="../bootstrap-4.1.3-dist/js/bootstrap.min.js"></script> -->
+        <script src="./bootstrap-4.1.3-dist/js/bootstrap.min.js"></script>
+        <!-- <link rel="stylesheet" type="text/css" href="../styles/animate.css">
+        <link rel="stylesheet" type="text/css" href="../styles/index.css"> -->
+        <link rel="stylesheet" type="text/css" href="./css/animate.css">
+        <link rel="stylesheet" type="text/css" href="./css/icon2019.css">
 	</head>
 
 	<body>
@@ -62,7 +67,7 @@
     <!-- Event Trailer -->
     <div id='trailer'>
       <div class="embed-responsive embed-responsive-21by9">
-        <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/PyqV1YZ_gQ8" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/xIq1CQdn1S4" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
       </div>
     </div>
 
@@ -159,6 +164,7 @@
     </footer>
     
     <!-- Custom Scripts -->
-    <script type="text/javascript" src="../scripts/script.js"></script>
+    <!-- <script type="text/javascript" src="../scripts/script.js"></script> -->
+    <script type="text/javascript" src="./scripts/icon2019.js"></script>
 	</body>
 </html>
