--- a/html/icon2019.html
+++ b/html/icon2019.html
@@ -50,7 +50,9 @@
             </li>
           </ul>
           <form class="form-inline my-2 my-lg-0">
-            <button class="btn btn-outline-success my-2 my-sm-0" type="button">BUY TICKETS</button>
+            <a href="https://www.tinyurl.com/icon2k19">
+              <button class="btn btn-outline-success my-2 my-sm-0" type="button">BUY TICKETS</button>
+            </a>
           </form>
         </div>
       </nav>
