--- a/html/icon2019.html
+++ b/html/icon2019.html
@@ -94,7 +94,7 @@
           </li>
         </ul>
       </div>
-      <div id="speaker-content-row"></div>
+      <div id="speaker-content-row" class="row"></div>
     </div>
 
     <!-- Charity Section -->
