finished updating website with responsiveness but no pictures

--- a/html/icon2019.html
+++ b/html/icon2019.html
@@ -9,8 +9,8 @@
         <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css" integrity="sha384-B4dIYHKNBt8Bc12p+WXckhzcICo0wtJAoU8YZTY5qE0Id1GSseTk6S+L3BlXeVIU" crossorigin="anonymous">
         <script src="../node_modules/jquery/dist/jquery.min.js"></script>
         <!-- <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8=" crossorigin="anonymous"></script> -->
-        <!-- <script src="../bootstrap-4.1.3-dist/js/bootstrap.min.js"></script> -->
-        <script src="./bootstrap-4.1.3-dist/js/bootstrap.min.js"></script>
+        <script src="../bootstrap-4.1.3-dist/js/bootstrap.min.js"></script>
+        <!-- <script src="./bootstrap-4.1.3-dist/js/bootstrap.min.js"></script> -->
         <!-- <link rel="stylesheet" type="text/css" href="../styles/animate.css">
         <link rel="stylesheet" type="text/css" href="../styles/index.css"> -->
         <!-- <link rel="stylesheet" type="text/css" href="./css/animate.css"> -->
@@ -137,14 +137,13 @@
 
     </div>
 
-    <div id="sponsor-section" class="container-fluid text-center">
+    <!-- <div id="sponsor-section" class="container-fluid text-center">
       <h1>Proudly Supported By</h1>
-      <!-- Add a Countdown here -->
       <h4>John Clancy Auditorium, UNSW</h4>
       <h5>Sydney, Australia</h5>
       <h6 style="color: grey; font-weight: 400;">July 6th, 2019</h6>
       <a href="#" class="btn btn-primary">GET TICKETS</a>
-    </div>
+    </div> -->
     
     <footer id="main-footer" class="footer">
         <div class="row">
